css/vvs.css
.time-span {
    width: 130px;
    display: inline-block;
}

.fade-out {
    background: rgba(0, 0, 0, 1.0);
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    position: fixed;
    overflow-y: hidden;
    z-index: 1031;
    transition: background 10s;
}

